fix(inline-css): overflow

--- a/plugins/inline-css/components/Window.scss
+++ b/plugins/inline-css/components/Window.scss
@@ -18,7 +18,7 @@
   & .inner {
     margin: 8px;
     overflow-y: auto;
-    height: calc(100% - 30px);
+    height: calc(100% - 50px);
 
     /* Scrollbar */
     &::-webkit-scrollbar-corner {
